# acp-factory

./: .gitignore  .gitmodules  .npmignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  vitest.config.ts
.sudocode/: .gitignore  config.json  issues.jsonl  specs.jsonl
examples/: basic-usage.ts  interactive-permissions.ts  interrupt-context.ts
python/: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
python/src/acp_factory/: __init__.py  agent_handle.py  client_handler.py  factory.py  pushable.py  session.py  types.py
python/src/acp_factory/providers/: __init__.py  claude_code.py  codex.py  copilot_cli.py  gemini.py  opencode.py
python/tests/: test_client_handler.py  test_pushable.py
python/tests/e2e/: __init__.py  test_codex_e2e.py  test_gemini_e2e.py  test_opencode_e2e.py
scripts/: release.sh
src/: agent-handle.ts  client-handler.test.ts  client-handler.ts  factory.ts  index.ts  session.ts  types.ts
src/__tests__/: fork-with-flush.e2e.test.ts
src/providers/: claude-code.ts  codex.ts  copilot-cli.ts  gemini.ts  opencode.ts
test/: agent-handle.test.ts  client-handler.test.ts  compaction.test.ts  factory.test.ts  fork-with-flush.test.ts  session.test.ts  types.test.ts
test/e2e/: codex.e2e.test.ts  copilot-cli.e2e.test.ts  fork-with-flush.e2e.test.ts  gemini.e2e.test.ts  opencode.e2e.test.ts  session-fork-resume.test.ts  skills.e2e.test.ts
