[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acp-factory"
version = "0.1.1"
description = "A library for spawning and managing agents through the Agent Client Protocol (ACP)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Sudocode AI" }
]
keywords = [
    "acp",
    "agent",
    "agent-client-protocol",
    "ai",
    "llm",
    "sdk"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "agent-client-protocol>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/sudocode-ai/acp-factory"
Documentation = "https://github.com/sudocode-ai/acp-factory/tree/main/python#readme"
Repository = "https://github.com/sudocode-ai/acp-factory"
Issues = "https://github.com/sudocode-ai/acp-factory/issues"
Changelog = "https://github.com/sudocode-ai/acp-factory/blob/main/python/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/acp_factory"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
